--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,18 +6,7 @@
   margin: 0 auto;
   position:fixed;
 }
-.forheaderli {
-  text-decoration:none;
-  list-style-type:none;
-  font-size:25px
-}
-.forheaderli:hover{
-  color:black;
-}
-#title{
-  font-size:45px;
-  width:100%;
-}
+
 /*ending of header*/
 /*banner styling*/
 .banner{
@@ -37,7 +26,7 @@ body {
 .logos {
   width:100%auto;
   margin:0 auto;
-  max-width:130px;
+  max-width:120px;
   min-height:100px;
   margin-left:150px;
 }
@@ -139,4 +128,69 @@ body {
 }
 .gametags:hover {
   color:rgb(255, 254, 255);
+}
+/*end*/
+/*nav shit lol*/
+nav {
+  padding: 50px;
+  text-align: center;
+
+}
+nav > ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: inline-block;
+  background: #ddd;
+  border-radius: 5px;
+}
+nav > ul > li {
+  float: left;
+  width: 150px;
+  height: 65px;
+  line-height: 65px;
+  position: relative;
+  text-transform: uppercase;
+  font-size: 14px;
+  color: rgba(0, 0, 0, 0.7);
+  cursor: pointer;
+  font-family: 'Bungee' , cursive;  max-width: 1200px;
+  text-decoration:none;
+
+}
+nav > ul > li:hover {
+  background: #d5d5d5;
+  border-radius: 5px;
+}
+
+ul.drop-menu {
+  position: absolute;
+  top: 100%;
+  left: 0%;
+  width: 100%;
+  padding: 0;
+}
+ul.drop-menu li {
+  background: #666;
+  color: rgba(255, 255, 255, 0.7);
+}
+ul.drop-menu li:hover {
+  background: #606060;
+}
+ul.drop-menu li:last-child {
+  border-radius: 0px 0px 5px 5px;
+}
+
+ul.drop-menu li {
+  display: none;
+}
+
+li:hover > ul.drop-menu li {
+  display: block;
+}
+
+/* end of that ting skrt skrt*/
+.kr {
+  width:100%;
+  height:1000px;
 }
